code/dotnet/SPAREngine/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# SPAR Engine client library for .NET

[![Nuget](https://img.shields.io/nuget/v/FactSet.SDK.SPAREngine)](https://www.nuget.org/packages/FactSet.SDK.SPAREngine)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch SPAR Engine Analytics through APIs.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2
- Package version: 0.8.10
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.Protobuf.Stach.Extensions
dotnet add package FactSet.SDK.SPAREngine -v 0.8.10
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.Protobuf.Stach.Extensions
nuget install FactSet.SDK.SPAREngine -Version 0.8.10
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.SPAREngine.Api;
using FactSet.SDK.SPAREngine.Client;
using FactSet.SDK.SPAREngine.Model;

namespace Example
{
    public static class GetAccountsExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.SPAREngine.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new AccountsApi(config);
            var path = "\"Client:Foo/Bar\"";  // string | The directory to get the accounts and sub-directories in (default to "Client:Foo/Bar")

            try
            {
                // Get accounts and sub-directories in a directory
                AccountDirectories result = apiInstance.GetAccounts(path);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling AccountsApi.GetAccounts: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## STACH extensions

Some methods within this client library are able to return STACH formatted data. Please see the documentation of those endpoints on how to enable and use STACH formatted data.

Documentation of the STACH extension can be found here: [stach-extensions](https://github.com/factset/stach-extensions) and here [STACH schema](https://factset.github.io/stachschema)

## Documentation for API Endpoints

All URIs are relative to *https://api-sandbox.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AccountsApi* | [**GetAccounts**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/AccountsApi.md#getaccounts) | **GET** /analytics/lookups/v2/accounts/{path} | Get accounts and sub-directories in a directory
*CalculationsApi* | [**CancelCalculationById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/CalculationsApi.md#cancelcalculationbyid) | **DELETE** /analytics/engines/v2/calculations/{id} | Cancel calculation by id
*CalculationsApi* | [**GetCalculationStatusById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/CalculationsApi.md#getcalculationstatusbyid) | **GET** /analytics/engines/v2/calculations/{id} | Get calculation status by id
*CalculationsApi* | [**GetCalculationStatusSummaries**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/CalculationsApi.md#getcalculationstatussummaries) | **GET** /analytics/engines/v2/calculations | Get all calculation statuses
*CalculationsApi* | [**RunCalculation**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/CalculationsApi.md#runcalculation) | **POST** /analytics/engines/v2/calculations | Run calculation
*ComponentsApi* | [**GetSPARComponents**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/ComponentsApi.md#getsparcomponents) | **GET** /analytics/lookups/v2/engines/spar/components | Get SPAR components
*DocumentsApi* | [**GetSPAR3Documents**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/DocumentsApi.md#getspar3documents) | **GET** /analytics/lookups/v2/engines/spar/documents/{path} | Gets SPAR3 documents and sub-directories in a directory
*FrequenciesApi* | [**GetSPARFrequencies**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/FrequenciesApi.md#getsparfrequencies) | **GET** /analytics/lookups/v2/engines/spar/frequencies | Get SPAR frequencies
*SPARBenchmarkApi* | [**GetSPARBenchmarkById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/SPARBenchmarkApi.md#getsparbenchmarkbyid) | **GET** /analytics/lookups/v2/engines/spar/benchmarks | Get SPAR benchmark details


## Documentation for Models

 - [Model.AccountDirectories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/AccountDirectories.md)
 - [Model.Calculation](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/Calculation.md)
 - [Model.CalculationStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/CalculationStatus.md)
 - [Model.CalculationStatusSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/CalculationStatusSummary.md)
 - [Model.CalculationUnitStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/CalculationUnitStatus.md)
 - [Model.ComponentSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/ComponentSummary.md)
 - [Model.DocumentDirectories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/DocumentDirectories.md)
 - [Model.Frequency](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/Frequency.md)
 - [Model.PACalculationColumn](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/PACalculationColumn.md)
 - [Model.PACalculationGroup](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/PACalculationGroup.md)
 - [Model.PACalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/PACalculationParameters.md)
 - [Model.PADateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/PADateParameters.md)
 - [Model.PAIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/PAIdentifier.md)
 - [Model.PubCalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/PubCalculationParameters.md)
 - [Model.PubDateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/PubDateParameters.md)
 - [Model.PubIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/PubIdentifier.md)
 - [Model.SPARBenchmark](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/SPARBenchmark.md)
 - [Model.SPARCalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/SPARCalculationParameters.md)
 - [Model.SPARDateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/SPARDateParameters.md)
 - [Model.SPARIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/SPARIdentifier.md)
 - [Model.VaultCalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/VaultCalculationParameters.md)
 - [Model.VaultDateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/VaultDateParameters.md)
 - [Model.VaultIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v2/docs/VaultIdentifier.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
