code/dotnet/SPAREngine/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Style Performance and Risk Analysis (SPAR) Engine client library for .NET

[![API Version](https://img.shields.io/badge/api-v3.16.2-blue)](https://developer.factset.com/api-catalog/spar-engine-api)
[![Nuget](https://img.shields.io/badge/nuget-v2.2.0-orange)](https://www.nuget.org/packages/FactSet.SDK.SPAREngine/2.2.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Analytics through APIs.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.16.2
- SDK version: 2.2.0
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.Protobuf.Stach.Extensions
dotnet add package FactSet.SDK.SPAREngine -v 2.2.0
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.Protobuf.Stach.Extensions
nuget install FactSet.SDK.SPAREngine -Version 2.2.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.SPAREngine.Api;
using FactSet.SDK.SPAREngine.Client;
using FactSet.SDK.SPAREngine.Model;

namespace Example
{
    public static class GetAccountsExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.SPAREngine.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new AccountsApi(config);
            var path = "Client:";  // string | The directory to get the accounts and sub-directories.

            try
            {
                // Get accounts and sub-directories in a directory
                AccountDirectoriesRoot result = apiInstance.GetAccounts(path);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling AccountsApi.GetAccounts: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## STACH extensions

Some methods within this client library are able to return STACH formatted data. Please see the documentation of those endpoints on how to enable and use STACH formatted data.

Documentation of the STACH extension can be found here: [stach-extensions](https://github.com/factset/stach-extensions) and here [STACH schema](https://factset.github.io/stachschema)

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AccountsApi* | [**GetAccounts**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/AccountsApi.md#getaccounts) | **GET** /analytics/lookups/v3/accounts/{path} | Get accounts and sub-directories in a directory
*AccountsApi* | [**GetSPARReturnsType**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/AccountsApi.md#getsparreturnstype) | **GET** /analytics/engines/spar/v3/accounts/{accountPath}/returns-type | Get SPAR account returns type details
*BenchmarksApi* | [**GetSPARBenchmarkById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/BenchmarksApi.md#getsparbenchmarkbyid) | **GET** /analytics/engines/spar/v3/benchmarks | Get SPAR benchmark details
*ComponentsApi* | [**GetSPARComponentById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/ComponentsApi.md#getsparcomponentbyid) | **GET** /analytics/engines/spar/v3/components/{id} | Get SPAR component by id
*ComponentsApi* | [**GetSPARComponents**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/ComponentsApi.md#getsparcomponents) | **GET** /analytics/engines/spar/v3/components | Get SPAR components
*CurrenciesApi* | [**GetCurrencies**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/CurrenciesApi.md#getcurrencies) | **GET** /analytics/lookups/v3/currencies | Get currencies
*DocumentsApi* | [**GetSPAR3Documents**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/DocumentsApi.md#getspar3documents) | **GET** /analytics/engines/spar/v3/documents/{path} | Gets SPAR3 documents and sub-directories in a directory
*FrequenciesApi* | [**GetSPARFrequencies**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/FrequenciesApi.md#getsparfrequencies) | **GET** /analytics/engines/spar/v3/frequencies | Get SPAR frequencies
*SPARCalculationsApi* | [**CancelCalculationById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/SPARCalculationsApi.md#cancelcalculationbyid) | **DELETE** /analytics/engines/spar/v3/calculations/{id} | Cancel SPAR calculation
*SPARCalculationsApi* | [**GetAllCalculations**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/SPARCalculationsApi.md#getallcalculations) | **GET** /analytics/engines/spar/v3/calculations | Get all calculations
*SPARCalculationsApi* | [**GetCalculationParameters**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/SPARCalculationsApi.md#getcalculationparameters) | **GET** /analytics/engines/spar/v3/calculations/{id} | Get SPAR calculation parameters by id
*SPARCalculationsApi* | [**GetCalculationStatusById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/SPARCalculationsApi.md#getcalculationstatusbyid) | **GET** /analytics/engines/spar/v3/calculations/{id}/status | Get SPAR calculation status by id
*SPARCalculationsApi* | [**GetCalculationUnitResultById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/SPARCalculationsApi.md#getcalculationunitresultbyid) | **GET** /analytics/engines/spar/v3/calculations/{id}/units/{unitId}/result | Get SPAR calculation result by id
*SPARCalculationsApi* | [**PostAndCalculate**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/SPARCalculationsApi.md#postandcalculate) | **POST** /analytics/engines/spar/v3/calculations | Create and Run SPAR calculation
*SPARCalculationsApi* | [**PutAndCalculate**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/SPARCalculationsApi.md#putandcalculate) | **PUT** /analytics/engines/spar/v3/calculations/{id} | Create or Update SPAR calculation and run it.
*SPARPeerUniverseApi* | [**GetListOfPeerUniverse**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/SPARPeerUniverseApi.md#getlistofpeeruniverse) | **GET** /analytics/engines/spar/v3/peer-universe | Get List of Peer Universe


## Documentation for Models

 - [Model.AccountDirectories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/AccountDirectories.md)
 - [Model.AccountDirectoriesRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/AccountDirectoriesRoot.md)
 - [Model.CalculationMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/CalculationMeta.md)
 - [Model.CalculationStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/CalculationStatus.md)
 - [Model.CalculationStatusMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/CalculationStatusMeta.md)
 - [Model.CalculationStatusRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/CalculationStatusRoot.md)
 - [Model.CalculationUnitStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/CalculationUnitStatus.md)
 - [Model.CalculationUnitStatusMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/CalculationUnitStatusMeta.md)
 - [Model.CalculationsSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/CalculationsSummary.md)
 - [Model.CalculationsSummaryRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/CalculationsSummaryRoot.md)
 - [Model.ClientErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/ClientErrorResponse.md)
 - [Model.ComponentSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/ComponentSummary.md)
 - [Model.ComponentSummaryRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/ComponentSummaryRoot.md)
 - [Model.Currency](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/Currency.md)
 - [Model.CurrencyRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/CurrencyRoot.md)
 - [Model.DocumentDirectories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/DocumentDirectories.md)
 - [Model.DocumentDirectoriesRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/DocumentDirectoriesRoot.md)
 - [Model.Error](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/Error.md)
 - [Model.ErrorSource](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/ErrorSource.md)
 - [Model.Frequency](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/Frequency.md)
 - [Model.FrequencyRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/FrequencyRoot.md)
 - [Model.ObjectRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/ObjectRoot.md)
 - [Model.PaginationInfo](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/PaginationInfo.md)
 - [Model.PaginationMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/PaginationMeta.md)
 - [Model.ReturnType](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/ReturnType.md)
 - [Model.SPARAccounts](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/SPARAccounts.md)
 - [Model.SPARAccountsRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/SPARAccountsRoot.md)
 - [Model.SPARBenchmark](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/SPARBenchmark.md)
 - [Model.SPARBenchmarkRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/SPARBenchmarkRoot.md)
 - [Model.SPARCalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/SPARCalculationParameters.md)
 - [Model.SPARCalculationParametersRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/SPARCalculationParametersRoot.md)
 - [Model.SPARComponent](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/SPARComponent.md)
 - [Model.SPARComponentIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/SPARComponentIdentifier.md)
 - [Model.SPARComponentRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/SPARComponentRoot.md)
 - [Model.SPARDateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/SPARDateParameters.md)
 - [Model.SPARIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/SPARIdentifier.md)
 - [Model.SPARPeerUniverseListResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/SPARPeerUniverseListResponse.md)
 - [Model.SPARPeerUniverseResponseItem](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/SPARPeerUniverseResponseItem.md)
 - [Model.SPARPeerUniverseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SPAREngine/v3/docs/SPARPeerUniverseRoot.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
